[package]
name = "manabase"
version = "0.0.0"
authors = ["Kathryn Long <squeeself@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reqwest = {version = "0.10", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.5"
regex = "1"
env_logger = "0.7"
log = "0.4"
askama = "0.9"
lazy_static = "1"
clap = "2.33"
fs_extra = "1"
itertools = "0.9"
chrono = "0.4"
tokio = {version = "0.2", features = ["macros"]}
anyhow = "1"