[package]
name = "manabase"
version = "0.0.0"
authors = ["Kathryn Long <squeeself@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.7"
regex = "1"
env_logger = "0.10"
log = "0.4"
askama = "0.12"
lazy_static = "1"
clap = "4"
fs_extra = "1"
itertools = "0.11"
chrono = {version = "0.4", features = ["serde"]}
tokio = {version = "1", features = ["full"]}
anyhow = "1"